--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css">
+
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
