--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins:400,700" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css" />
 
   <style>
@@ -42,7 +44,7 @@
       <ul>
         <li>
           <a href="#">
-            <i class="fab fa-facebook"></i>
+            <i class="fab fa-facebook-f"></i>
             <span class="sr-only">Follow us on Facebook</span>
           </a>
         </li>
