Google Fonts change, removed attribution, moved social menu

--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
-
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <header>
@@ -39,36 +34,29 @@
 
       <a href="#" class="cta-button">Register</a>
     </div>
-
-    <nav>
-      <ul>
-        <li>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-            <span class="sr-only">Follow us on Facebook</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-            <span class="sr-only">Follow us on Twitter</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fab fa-instagram"></i>
-            <span class="sr-only">Follow us on Instagram</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
   </main>
 
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <ul id="social-menu">
+      <li>
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+          <span class="sr-only">Follow us on Facebook</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+          <span class="sr-only">Follow us on Twitter</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+          <span class="sr-only">Follow us on Instagram</span>
+        </a>
+      </li>
+    </ul>
   </footer>
 </body>
 </html>
