fix for footer overlap in mobile

--- a/index.html
+++ b/index.html
@@ -16,47 +16,49 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <a href="index.html">
-      <img src="images/logo.svg" alt="Huddle" />
-    </a>
-  </header>
+  <div class="container">
+    <header>
+      <a href="index.html">
+        <img src="images/logo.svg" alt="Huddle" />
+      </a>
+    </header>
 
-  <main>
-    <figure>
-      <img src="images/illustration-mockups.svg" alt="" />
-    </figure>
+    <main>
+      <figure>
+        <img src="images/illustration-mockups.svg" alt="" />
+      </figure>
 
-    <div>
-      <h1>Build The Community Your Fans Will Love</h1>
+      <div>
+        <h1>Build The Community Your Fans Will Love</h1>
 
-      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
 
-      <a href="#" class="cta-button">Register</a>
-    </div>
-  </main>
+        <a href="#" class="cta-button">Register</a>
+      </div>
+    </main>
 
-  <footer>
-    <ul id="social-menu">
-      <li>
-        <a href="#">
-          <i class="fab fa-facebook-f"></i>
-          <span class="sr-only">Follow us on Facebook</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="fab fa-twitter"></i>
-          <span class="sr-only">Follow us on Twitter</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="fab fa-instagram"></i>
-          <span class="sr-only">Follow us on Instagram</span>
-        </a>
-      </li>
-    </ul>
-  </footer>
+    <footer>
+      <ul id="social-menu">
+        <li>
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
+            <span class="sr-only">Follow us on Facebook</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fab fa-twitter"></i>
+            <span class="sr-only">Follow us on Twitter</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fab fa-instagram"></i>
+            <span class="sr-only">Follow us on Instagram</span>
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
