--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -58,6 +64,11 @@
           </a>
         </li>
       </ul>
+
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://jessiegagnon.com">Jessie Gagnon</a>.
+      </p>
     </footer>
   </div>
 </body>
