--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://jessiegagnon.com">Jessie Gagnon</a>.
+        Coded by <a href="https://jessiegagnon.com" target="_blank">Jessie Gagnon</a>.
       </p>
     </footer>
   </div>
