--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
       <figure>
-        <img src="images/illustration-mockups.svg" alt="" />
+        <img src="images/illustration-mockups.svg" alt="Vector illustration of a desktop and mobile mockup" />
       </figure>
 
       <div>
