--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CPoppins" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
 </head>
